--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@
   --default-font-family: var(--font-roboto);
 }
 
+html, body, #root {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+}
