CDL-84 theme adjust

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,49 @@
     themes: light --default, dark --prefersdark, autumn;
 }
 
+
+/* Theme generator
+ * https://daisyui.com/theme-generator
+ */
+
+@plugin "daisyui/theme" {
+  name: "autumn";
+  default: false;
+  prefersdark: false;
+  color-scheme: "light";
+  --color-base-100: oklch(95.814% 0 0);
+  --color-base-200: oklch(89.107% 0 0);
+  --color-base-300: oklch(82.4% 0 0);
+  --color-base-content: #1F1E1C;
+  --color-primary: #B5605A;
+  --color-primary-content: #F0EDE4;
+  --color-secondary: #616F9D;
+  --color-secondary-content: #F0EDE4;
+  --color-accent: #F6C6C3;
+  --color-accent-content: oklch(14.685% 0.018 60.729);
+  --color-neutral: #B5C0C3;
+  --color-neutral-content: #1F1E1C;
+  --color-info: oklch(69.224% 0.097 207.284);
+  --color-info-content: oklch(13.844% 0.019 207.284);
+  --color-success: oklch(60.995% 0.08 174.616);
+  --color-success-content: oklch(12.199% 0.016 174.616);
+  --color-warning: oklch(70.081% 0.164 56.844);
+  --color-warning-content: oklch(14.016% 0.032 56.844);
+  --color-error: oklch(53.07% 0.241 24.16);
+  --color-error-content: oklch(90.614% 0.048 24.16);
+  --radius-selector: 0.5rem;
+  --radius-field: 0.5rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1.5px;
+  --depth: 1;
+  --noise: 0;
+}
+
+
+
+/* Custom theme configuration */
 @theme {
   --font-tino: "Tino", serif;
   --font-roboto: "Roboto", sans-serif;
@@ -17,3 +60,4 @@ html, body, #root {
     margin: 0;
     padding: 0;
 }
+
